--- a/login.html
+++ b/login.html
@@ -12,13 +12,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simbá</title>
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
 </head>
 <body>
     <main class="main-layout">
         <!--Logo-->
         <header class="logo">
-            <img src="../Images/logo - simbá.png" alt="Logo" title="simbá" class="logo-img">
+            <img src="./Assets/Images/logo - simbá.png" alt="Logo" title="simbá" class="logo-img">
             <div class="logo-text">
                 <h1>SIMBÁ</h1>
                 <p>FINANÇAS COM INTELIGÊNCIA</p>
